# esp-wifi-remote

./: .gitignore  .pre-commit-config.yaml  0001-feat-wifi-remote-Add-support-for-wifi-remote-to-esp_.patch  CONTRIBUTING.md  README.md
components/esp_wifi_remote/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  Kconfig.5.3.0.in  Kconfig.5.3.1.in  Kconfig.5.3.2.in  Kconfig.5.3.3.in  Kconfig.5.3.4.in  Kconfig.5.4.0.in  Kconfig.5.4.1.in  Kconfig.5.4.2.in  Kconfig.5.4.3.in  Kconfig.5.5.0.in  Kconfig.5.5.1.in  Kconfig.6.0.0.in  Kconfig.idf_v5.3.in  Kconfig.idf_v5.4.in  Kconfig.idf_v5.5.in  Kconfig.idf_v6.0.in  Kconfig.idf_v6.1.in  Kconfig.rpc.in  README.md  esp_wifi_remote_net.c  esp_wifi_remote_net2.c  esp_wifi_remote_netif.c  esp_wifi_remote_netif2.c  idf_component.yml  sdkconfig.rename
components/esp_wifi_remote/eppp/: eppp_init.c  wifi_remote_rpc_client.cpp  wifi_remote_rpc_server.cpp
components/esp_wifi_remote/examples/: pytest_eppp.py  sdkconfig.ci.hosted_slave
components/esp_wifi_remote/examples/mqtt/: custom.sdkconfig.at  sdkconfig.ci.hosted  sdkconfig.ci.p4  sdkconfig.ci.p4_1  sdkconfig.ci.p4_2  sdkconfig.ci.p4_3
components/esp_wifi_remote/examples/server/: sdkconfig.ci.c6
components/esp_wifi_remote/examples/test_certs/: .gitignore
components/esp_wifi_remote/examples/two_stations/: CMakeLists.txt  README.md
components/esp_wifi_remote/idf_tag_v5.3/: Kconfig.slave_select.in  esp_eap_client_with_remote.c
components/esp_wifi_remote/idf_tag_v5.3.1/: Kconfig.slave_select.in  Kconfig.wifi.in
components/esp_wifi_remote/idf_tag_v5.3.1/include/: esp_wifi_default_config.h
components/esp_wifi_remote/idf_tag_v5.3.2/: Kconfig.slave_select.in  Kconfig.wifi.in
components/esp_wifi_remote/idf_tag_v5.3.2/include/: esp_wifi_default_config.h
components/esp_wifi_remote/idf_tag_v5.3.3/: Kconfig.wifi.in  esp_eap_client_remote_weak.c
components/esp_wifi_remote/idf_tag_v5.3.3/include/: esp_eap_client_remote_api.h  esp_wifi_default_config.h
components/esp_wifi_remote/idf_tag_v5.3/include/: esp_wifi_remote_api.h
components/esp_wifi_remote/idf_tag_v5.4/: Kconfig.wifi.in
components/esp_wifi_remote/idf_tag_v5.4.0/include/: esp_wifi_remote_api.h
components/esp_wifi_remote/idf_tag_v5.4.1/: esp_eap_client_with_remote.c
components/esp_wifi_remote/idf_tag_v5.4.1/include/: esp_wifi_default_config.h
components/esp_wifi_remote/idf_tag_v5.4.2/: Kconfig.in  Kconfig.slave_select.in  Kconfig.wifi.in
components/esp_wifi_remote/idf_tag_v5.4.2/include/: esp_eap_client_remote_api.h  esp_wifi_default_config.h
components/esp_wifi_remote/idf_tag_v5.4/include/: esp_eap_client_remote_api.h  esp_wifi_default_config.h  esp_wifi_static.h
components/esp_wifi_remote/idf_tag_v5.5/: Kconfig.slave_select.in  Kconfig.wifi.in
components/esp_wifi_remote/idf_tag_v5.5.0/include/: esp_wifi_default_config.h  esp_wifi_remote_api.h
components/esp_wifi_remote/idf_tag_v5.5.1/: Kconfig.wifi.in
components/esp_wifi_remote/idf_tag_v5.5.1/include/: esp_wifi_default_config.h
components/esp_wifi_remote/idf_tag_v5.5/include/: esp_eap_client_remote_api.h  esp_wifi_default_config.h
components/esp_wifi_remote/idf_v5.3/: Kconfig.in  Kconfig.soc_wifi_caps.in  Kconfig.wifi.in  esp_eap_client_remote_weak.c  esp_eap_client_with_remote.c  esp_wifi_remote_weak.c  esp_wifi_with_remote.c
components/esp_wifi_remote/idf_v5.3/include/: esp_eap_client_remote_api.h  esp_wifi_default_config.h  esp_wifi_remote_api.h
components/esp_wifi_remote/idf_v5.4/: Kconfig.slave_select.in  Kconfig.soc_wifi_caps.in  Kconfig.wifi.in  esp_eap_client_remote_weak.c  esp_eap_client_with_remote.c  esp_wifi_remote_weak.c  esp_wifi_with_remote.c
components/esp_wifi_remote/idf_v5.4/include/: esp_eap_client_remote_api.h  esp_wifi_default_config.h  esp_wifi_remote_api.h
components/esp_wifi_remote/idf_v5.5/: Kconfig.slave_select.in  Kconfig.soc_wifi_caps.in  Kconfig.wifi.in  esp_eap_client_remote_weak.c  esp_eap_client_with_remote.c  esp_wifi_remote_weak.c  esp_wifi_with_remote.c
components/esp_wifi_remote/idf_v5.5/include/: esp_eap_client_remote_api.h  esp_wifi_default_config.h  esp_wifi_remote_api.h
components/esp_wifi_remote/idf_v6.0/: Kconfig.slave_select.in  Kconfig.soc_wifi_caps.in  Kconfig.wifi.in  esp_eap_client_remote_weak.c  esp_eap_client_with_remote.c
components/esp_wifi_remote/idf_v6.0/include/: esp_eap_client_remote_api.h  esp_interface.h  esp_wifi_remote_api.h  (+1 more)
components/esp_wifi_remote/idf_v6.1/: Kconfig.slave_select.in  Kconfig.soc_wifi_caps.in  Kconfig.wifi.in  esp_eap_client_with_remote.c  esp_wifi_remote_weak.c  esp_wifi_with_remote.c
components/esp_wifi_remote/include/: esp_wifi_remote.h  esp_wifi_remote_version.h
components/esp_wifi_remote/scripts/: generate_and_check.py  generate_for_all_versions.sh  ignore_extensions.h
components/wifi_remote_over_at/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/wifi_remote_over_at/src/: wifi_remote_over_at.cpp
components/wifi_remote_over_eppp/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/wifi_remote_over_eppp/scripts/: README.md  generate_test_certs.sh
components/wifi_remote_over_eppp/src/: eppp_init.c  wifi_remote_rpc_client.cpp  wifi_remote_rpc_impl.hpp  wifi_remote_rpc_server.cpp
(+83 files in other folders)
